src/objects/AdditionalQuestion__c.object
<CustomObject>
    <fields>
        <fullName>ArmId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Arm Id</label>
        <referenceTo>Arm__c</referenceTo>
        <relationshipLabel>AdditionalQuestions</relationshipLabel>
        <relationshipName>AdditionalQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRFMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRFMaster</label>
        <referenceTo>CRFMaster__c</referenceTo>
        <relationshipLabel>AdditionalQuestions</relationshipLabel>
        <relationshipName>AdditionalQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <label>CRF</label>
        <picklist>
            <picklistValues>
                <fullName>Menopausal Status Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Study Eligibility Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Study Pathology Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response Evaluation Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tissue Specimen Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Specimen Tracking Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI Volume Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseline Symptoms Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab and Test Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MammaPrint Microarray Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randomization Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adverse Event Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemo Treatment Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemo Summary Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Surgery Summary Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-Up Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Follow-Up Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Lost to Follow-Up Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-Study Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocol Violation Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Id</label>
        <referenceTo>QuestionAnswer__c</referenceTo>
        <relationshipLabel>AdditionalQuestions</relationshipLabel>
        <relationshipName>AdditionalQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrialId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Id</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>AdditionalQuestions</relationshipLabel>
        <relationshipName>AdditionalQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AdditionalQuestion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdditionalQuestions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>